--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap');
 
+:root {
+    --selected-color: #4fdfa7;
+}
+
 * {
     box-sizing: border-box;
 }
@@ -80,12 +84,13 @@ button.mode:hover {
     text-align: center;
     padding:1%;
     font-style: italic;
-    color: cornflowerblue;
+    color: white;
+    text-shadow: 1px 1px 2px black;
 
 }
 
 .seat.selected {
-    background-color: #6feaf6;
+    background-color: var(--selected-color);
 }
 
 .seat.occupied {
@@ -150,7 +155,8 @@ p.text {
 }
 
 p.text span {
-    color: #4fdfa7;
+    color: var(--selected-color);
     font-weight: 700;
+    text-shadow: 1px 1px 2px black;
 }
 
