--- a/style.css
+++ b/style.css
@@ -42,11 +42,10 @@ button.mode:hover {
 
 .mode_img {
     width: 100%;
-    height:100%;
+    height: 100%;
     object-fit: contain;
     margin: 0;
     padding: 0;
-
 }
 
 .light-mode {
@@ -63,7 +62,7 @@ button.mode:hover {
     border: 0;
     border-radius: 5px;
     font-size: 1rem;
-    margin-left: 10px ;
+    margin-left: 10px;
     padding: 5px 15px 5px 15px;
     cursor: pointer;
     -moz-appearance: none;
@@ -86,12 +85,11 @@ button.mode:hover {
     border-top-right-radius: 10px;
     font-size: 8px;
     text-align: center;
-    padding:1%;
+    padding: 1.5% 1% 1%;
     font-style: italic;
     color: white;
     text-shadow: 1px 1px 2px black;
     transition: 0.2s all;
-
 }
 
 .seat.selected {
@@ -164,4 +162,3 @@ p.text span {
     font-weight: 700;
     text-shadow: 1px 1px 2px black;
 }
-
